@@ -13,6 +13,7 @@ Default Qt Client
 - Option to choose bitween text or emoji for user and channel info in channel list
 - Fixed gender changed from female to male when migrating to 5.17 release
 - Fixed sound events disabled when migrating to 5.17 release
+- Fixed language not set at first start
 Android Client
 -
 iOS Client
